@@ -17,6 +17,9 @@ Changes between 1.3.0 and 1.3.1
   declarative approach with the @py.test.mark.xfail cannot
   be used as it would mark all configurations as xfail. 
 
+- fix issue94: make reporting more robust against bogus source code
+  (and internally be more careful when presenting unexpected byte sequences)
+
 - improve and refine letter reporting in the progress bar:
   .  pass
   f  failed test
